video height dynamic now, survey nav buttons are variably spaced instead of fixed allowing them to be farther apart and closer to the question area, and sticky/anchored video now works on IE and firefox (fixed zoom detection)

--- a/css/survey.scss
+++ b/css/survey.scss
@@ -130,7 +130,7 @@ body {
 	justify-content: center;
 	padding-bottom: 12px;
 	button {
-		margin: 40px 20px;
+		margin: 1.25% 10%;
 	}
 }
 
